fixed navbar jumping

--- a/contact-section/contact.css
+++ b/contact-section/contact.css
@@ -28,6 +28,14 @@ body {
 
 
 
+.navbar {
+    position: relative;
+    right: 13.5px;
+    
+}
+
+
+
 .header {
     position: relative;
     top: 0;
