--- a/skills-section/skills.css
+++ b/skills-section/skills.css
@@ -41,6 +41,7 @@ section {
 .navbar {
     position: relative;
     top: 6px;
+    right: 13.5px;
 }
 
 
